<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <View
            android:layout_width="0dip"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style.title_label_2"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/fund" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style.title_label_2"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/cdi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style.title_label_2"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:text="@string/on_month" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style.title_label_2"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:text="@string/on_year" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style.title_label_2"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:text="@string/all_month" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            style="@style/font_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/font_size_caption_2" />
    </LinearLayout>

    <View
        style="@style/view_separator"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:id="@+id/linear_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>