<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <br.heitor.easyinvest.views.widgets.FontTextView
        android:id="@+id/txt_title"
        style="@style/font_style.title"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <br.heitor.easyinvest.views.widgets.FontTextView
            android:id="@+id/txt_label_title"
            style="@style/font_style.title_label"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/thank_you" />

        <br.heitor.easyinvest.views.widgets.FontTextView
            android:id="@+id/txt_title_investment_fund"
            style="@style/font_style.title.big"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/info_message_sent_successfully" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <br.heitor.easyinvest.views.widgets.FontTextView
            android:id="@+id/txt_send_new_message"
            style="@style/font_style.title"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/action_send_new_message"
            android:textColor="@color/blue" />
    </LinearLayout>
</LinearLayout>