<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.heitor.easyinvest.views.activities.MainActivity">


    <br.heitor.easyinvest.views.widgets.FontTextInputLayout
        android:id="@+id/groupTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/font_style.label"
        app:errorTextAppearance="@style/textErrorLabel">

        <br.heitor.easyinvest.views.widgets.FontEditView
            android:id="@+id/txtEmail"
            style="@style/font_style.edt_text"
            android:hint="Nome"
            android:text="José da Silva Oliveira"
            android:imeOptions="actionDone"
            android:drawableRight="@drawable/ic_cancel_black_20dp"
            android:inputType="textEmailAddress" />
    </br.heitor.easyinvest.views.widgets.FontTextInputLayout>

    <br.heitor.easyinvest.views.widgets.FontTextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/font_style.label">

        <br.heitor.easyinvest.views.widgets.FontEditView
            style="@style/font_style.edt_text"
            android:hint="Nome"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </br.heitor.easyinvest.views.widgets.FontTextInputLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <br.heitor.easyinvest.views.widgets.FontTextView
            android:id="@+id/message"
            style="@style/font_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_home" />
    </FrameLayout>

    <br.heitor.easyinvest.views.widgets.FontButtonView
        android:id="@+id/btnTest"
        style="@style/button_style"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_send" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <br.heitor.easyinvest.views.widgets.FontButtonView
            android:id="@+id/btnNavInvestment"
            style="@style/button_nav_style"
            android:text="@string/investment" />

        <br.heitor.easyinvest.views.widgets.FontButtonView
            android:id="@+id/btnNavContact"
            style="@style/button_nav_style"
            android:text="@string/contact" />
    </LinearLayout>
</LinearLayout>
